objects/EWM_System_Name_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <label>Anthem Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <label>Claim System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBA_Platform__c</fullName>
        <label>EBA Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBA_System__c</fullName>
        <label>EBA System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EWM System Name Mapping</label>
    <pluralLabel>EWM System Name Mapping</pluralLabel>
</CustomObject>